--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@
   box-sizing: border-box;
 }
 
+a {
+  text-decoration: none;
+  color: inherit;
+}
+
 body {
   background: #fafafa;
   min-height: 100vh;
@@ -95,9 +100,9 @@ nav ul li a:hover {
 }
 
 .title {
-  font-size: 7vw;
-  font-family: FontRegular;
-  line-height: 0.8;
+  font-size: 9vw;
+  font-family: 'Cormorant SC', serif;
+  font-weight: 300;
   letter-spacing: -0.009em;
 }
 
@@ -112,7 +117,7 @@ nav ul li a:hover {
 .grid-images {
   width: 96vw;
   margin: 0 auto;
-  margin-top: 64px;
+  margin-top: 20px;
   display: grid;
   grid-gap: 30px;
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -122,10 +127,6 @@ nav ul li a:hover {
   width: 22.5vw;
   position: relative;
   cursor: pointer;
-}
-
-.lebron {
-  object-position: top !important;
 }
 
 .card-image {
@@ -142,6 +143,35 @@ nav ul li a:hover {
   margin-bottom: -7px;
   border-bottom: 2px solid #2a2a2a;
   object-fit: cover;
+}
+
+.return-top-button {
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 10;
+  cursor: pointer;
+  transition: all 1s ease-in-out;
+  border-radius: 50px;
+  background: rgba(255, 255, 255, 0.7);
+  color: #242423;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.return-top-button:hover {
+  background: rgba(255, 255, 255, 0.9);
+}
+
+.visible {
+  visibility: visible;
+  pointer-events: all;
 }
 
 footer {
@@ -202,4 +232,14 @@ footer {
   .card-title {
     font-size: 1.2vw;
   }
+}
+
+.footer-icons {
+  margin-top: 10px;
+}
+
+.footer-icons a {
+  text-decoration: none;
+  color: #fafafa;
+  font-size: 1.5rem;
 }
