--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@ a {
   color: inherit;
 }
 
+img::selection {
+  background: transparent;
+}
+
 body {
   background: #fafafa;
   min-height: 100vh;
@@ -240,6 +244,28 @@ footer {
   .card-title {
     font-size: 1.2vw;
   }
+
+  .return-top-button {
+    bottom: 10px;
+    right: 10px;
+    width: 40px;
+    height: 40px;
+    font-size: 1.5rem;
+  }
+
+  .footer-container {
+    flex-direction: column;
+  }
+  .footer-container h1 {
+    font-size: 2rem;
+  }
+  .footer-container span {
+    font-size: 1rem;
+  }
+
+  .events {
+    font-size: 1.5rem;
+  }
 }
 
 /* responsive for tablet */
@@ -283,4 +309,20 @@ footer {
   text-decoration: none;
   color: #fafafa;
   font-size: 1.5rem;
+}
+
+.active-img {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.9);
+  z-index: 999;
+  display: none;
+  justify-content: center;
+  align-items: center;
+  padding: 100px;
+}
+
+.active-img img {
+  height: 100%;
 }
